# load_testing

./: Cargo.toml  Justfile  README.md  report.html
src/: main.rs
