[package]
name = "load_testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.6"
tokio = {version="1.12.0",features=["full"]}
goose = "^0.14"
serde = "1.0.130"
uuid = {version="0.8.2", features=["v4"]}
rand = "0.8.4"
